--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -17,6 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "json-server": "json-server __json_server_mock__/db.json --watch --port 4001",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,6 +49,7 @@
     "@commitlint/config-conventional": "^17.2.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": ">=6",
+    "json-server": "^0.17.1",
     "lint-staged": ">=10",
     "prettier": "2.7.1"
   },
