--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.8",
     "antd": "4.x",
     "craco-less": "^2.0.0",
+    "dayjs": "^1.11.6",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.11.0",
     "react": "^18.2.0",
