--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "eslint-config-prettier": "^8.5.0",
     "husky": ">=6",
     "json-server": "^0.17.1",
     "lint-staged": ">=10",
+    "msw": "^0.49.2",
     "prettier": "2.7.1"
   },
   "lint-staged": {
